exports[`<ButtonList /> renders correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "justifyContent": "flex-end",
    }
  }>
  <View
    style={
      Object {
        "marginRight": 8,
      }
    }>
    <View />
  </View>
  <View
    style={
      Object {
        "marginRight": 8,
      }
    }>
    <View />
  </View>
</View>
`;

exports[`<ButtonList /> renders correctly with custom justifyContent 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "justifyContent": "flex-start",
    }
  }>
  <View
    style={
      Object {
        "marginRight": 8,
      }
    }>
    <View />
  </View>
  <View
    style={
      Object {
        "marginRight": 8,
      }
    }>
    <View />
  </View>
</View>
`;
